html: can display more than two float divs

--- a/template/result.html
+++ b/template/result.html
@@ -7,10 +7,12 @@ $def with (rss, html)
 
 <div id="header">
 <h1 style="margin-bottom:0;">Search Result</h1></div>
-<!--<h2 style="width:600">Keyword</h2>-->
-<!--<h2 style="width:600">Author</h2></div>-->
-<div id="subtitle1"><h2>Keyword</h2><div>
-<!--<div id="subtitle2"><h2>Author</h2><div>-->
+
+<div id="subtitle">
+<div id="subtitle1" style="width:600px;float:left;"><h2>Keyword</h2></div>
+<div id="subtitle2" style="width:600px;float:left;"><h2>Author</h2></div>
+</div>
+
 <div id="Keyword" style="height:200px;width:600px;float:left;">
 $for entr in rss.entries:
   <div><h4>$entr.title</h4>
