added citeseer logo to input.html

--- a/template/input.html
+++ b/template/input.html
@@ -3,6 +3,10 @@ $def with (title)
 <html>
 <body>
 
+<div id="image">
+<img src="/static/citeseer.png" />
+</div>
+
 <form name="input" method="get" action="/result">
 <input type="text" name="query" value=""><br>
 <input type="submit" value="Search">
