--- a/template/input.html
+++ b/template/input.html
@@ -10,7 +10,7 @@ $def with (title)
 <div>
 
 <div id="query_form">
-<img src="/static/citeseer.png" />
+<img src="/static/citeseer.png" alt="CiteSeerX"/>
 <form name="input" method="get" action="/result">
 <input type="text" name="query" value="">
 <input type="submit" value="Search">
