--- a/template/result.html
+++ b/template/result.html
@@ -30,9 +30,10 @@ $def with (rss, html)
 
 <div class="doc_result_div">
 $for entr in rss.entries:
-  <div class="text_div"><h4>$entr.title</h4>
+  <div class="text_div"><h4><a href=$entr.link>$entr.title</a></h4>
        <!--$entr.link<br>-->
-       $entr.description<br></div>
+       $entr.description<br>
+       </div>
 </div>
 
 <div class="aut_result_div">
