--- a/template/result.html
+++ b/template/result.html
@@ -33,15 +33,16 @@ $def with (rss, html)
 $for entr in rss.entries:
   <div class="text_div"><h4><a href=$entr.link>$entr.title</a></h4>
        <!--$entr.link<br>-->
-       $entr.description<br>
-       </div>
+       $entr.description
+  </div>
 </div>
 
 <div class="aut_result_div">
 $for e in html:
   <div class="text_div"><h4>$e.text</h4>
      <!--$entr.link<br>-->
-     <br></div>
+     <br>
+  </div>
 </div>
 
 </div>
