parsed html from citeseer author and printed it on console

--- a/template/result.html
+++ b/template/result.html
@@ -38,11 +38,10 @@ $for entr in rss.entries:
 </div>
 
 <div class="aut_result_div">
-$for e in html:
-  <div class="text_div"><h4>$e.text</h4>
-     <!--$entr.link<br>-->
+$#for e in html:
+  $#<div class="text_div"><h4>$e.text</h4>
      <br>
-  </div>
+  $#</div>
 </div>
 
 </div>
