--- a/template/result.html
+++ b/template/result.html
@@ -38,10 +38,24 @@ $for entr in rss.entries:
 </div>
 
 <div class="aut_result_div">
-$#for e in html:
-  $#<div class="text_div"><h4>$e.text</h4>
-     <br>
-  $#</div>
+$for l in html:
+    <div class="text_div"><h3><a href=$l['href']>$l['name']</a></h3>
+        <table>
+            $if l['Affiliations'] != '':
+                <tr><td>Affiliations</td>
+                <td>$l['Affiliations']</td></tr>
+
+            $if l['Variations'] != '':
+                <tr><td>Variations</td>
+                <td>$l['Variations']</td></tr>
+            $if l['Papers'] != '':
+                <tr><td>Papers</td>
+                <td>$l['Papers']</td></tr>
+            $if l['Homepage'] != '':
+                <tr><td>Homepage</td>
+                <td><a href=$l['Homepage']>$l['Homepage']</a></td></tr>
+        </table>
+    </div>
 </div>
 
 </div>
