--- a/template/result.html
+++ b/template/result.html
@@ -39,7 +39,7 @@ $for entr in rss.entries:
 
 <div class="aut_result_div">
 $for l in html:
-    <div class="text_div"><h3><a href=$l['href']>$l['name']</a></h3>
+    <div class="aut_text_div"><h4><a href=$l['href']>$l['name']</a></h4>
         <table>
             $if l['Affiliations'] != '':
                 <tr><td>Affiliations</td>
