reranking by combination of experts and citeseer ranking

--- a/template/result.html
+++ b/template/result.html
@@ -3,6 +3,7 @@ $def with (citeseerx, html)
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/static/inputcss.css" />
+<script type="text/javascript" src="/static/jquery-1.11.0.js"></script>
 <script type="text/javascript" src="/static/citeseer.js"></script>
 </head>
 
@@ -47,8 +48,7 @@ $for r in citeseerx:
        <table>
             <tr class="citedby"><td>Cited by </td><td>$r['citedby']</td></tr>
         </table>
-           <!--<table><tr><td><a class="abstract_toggle">Abstract</a></td></tr>
-            </table>-->
+           <div class="abstract_toggle">Abstract</div>
         <div class="pubabstract">
             $r['abstract']
         </div>
