--- a/template/result.html
+++ b/template/result.html
@@ -33,45 +33,33 @@ $def with (citeseerx, html)
 </div>-->
 <div class="doc_result_div">
 $for r in citeseerx:
-  <div class="text_div"><h4><a href=$r['href']>$r['title']</a></h4>
-       <table>
-            <tr class="citedby"><td>Cited by </td><td>$r['citedby']</td></tr>
-        </table>
-        <table>
-            <tr><td>By</td>
-            $for a in r['author']:
-                <td>$a, </td>
-            </tr>
-       </table>
-           <div class="abstract_toggle">Abstract</div>
-        <div class="pubabstract">
-            $r['abstract']
-        </div>
-        <table>
-        $if r['author_info'] != []:
-            $for a in r['author_info']:
-                <tr><td><img src="/static/head.png" /></td><td><a href=$a['href']>$a['author']</a></td></tr>
-                <tr><td></td><td>$a['Affiliations']</td></tr>
-        </table>
+  <div class="text_div"><a href=$r['href']>$r['title']</a> <a class='citedby'> [Citation: $r['citedby']]</a>
+   <p class="abstract_toggle"> By 
+    $for a in r['author']:
+        $a,
+    <a class="abs_color">Abstract</a>
+    </p>
+    <div class="pubabstract">
+        $r['abstract']
+    </div>
+    <table>
+    $if r['author_info'] != []:
+        $for a in r['author_info']:
+            <tr><td><img src="/static/head.png" /></td><td><a href=$a['href']>$a['author']</a></td></tr>
+             <tr><td></td><td>$a['Affiliations']</td></tr>
+    </table>
   </div>
 </div>
 
 <div class="aut_result_div"><h2 class="expert_font">Experts</h2>
 $for l in html:
-    <div class="aut_text_div"><h4><a href=$l['href']>$l['author']</a></h4>
-        <div>
+    <div class="aut_text_div">
+    <table>
+        <tr><td><img src="/static/head.png" /></td>
+        <td><a href=$l['href']>$l['author']</a></td></tr>
             $if l['Affiliations'] != '':
-                <tr><td>$l['Affiliations']</td></tr>
-        </div>
-            $#$if l['Variations'] != '':
-            $#    <tr><td>Variations</td>
-            $#    <td>$l['Variations']</td></tr>
-            $#if l['Papers'] != '':
-            $#    <tr><td>Papers</td>
-            $#    <td>$l['Papers']</td></tr>
-            $#if l['Homepage'] != '':
-            $#    <tr><td>Homepage</td>
-            $#    <td><a href=$l['Homepage']>$l['Homepage']</a></td></tr>
+                <tr><td></td><td>$l['Affiliations']</td></tr>
+    </table>
     </div>
 </div>
 
