--- a/static/inputcss.css
+++ b/static/inputcss.css
@@ -8,10 +8,10 @@ margin-left: 475px;
 .content_div
 {
 border-top: solid 1px #ccc;
-width: 1000px;
-margin-left: 100px;
+#width: 1000px;
+margin-left: 60px;
 margin-top: 20px;
-margin-right: 100px;
+margin-right: 60px;
 }
 
 .result_div
@@ -45,14 +45,14 @@ margin-bottom: 0;
 
 .doc_result_div
 {
-width: 630px;
+width: 700px;
 float: left;
 padding-left: 5px;
 }
 
 .aut_result_div
 {
-width: 350px;
+width: 370px;
 border-left: solid 2px #ccc;
 float: left;
 }
@@ -75,6 +75,7 @@ border-right: solid 2px #ccc;
 color: #19af19;
 font-size: small;
 }
+
 .abstract_toggle
 {
 cursor: pointer;
@@ -95,7 +96,7 @@ color: #333;
 font-size: small;
 }
 
-.expert_font
+.field_font
 {
 font-size:x-large;
 color:#999;
