added top-ranked experts back

--- a/template/result.html
+++ b/template/result.html
@@ -15,7 +15,7 @@ $def with (citeseerx, html, query)
 
 <div class="form_div">
 <form name="input" method="get" action="/result">
-<input type="text" name="query" value=$query>
+<input type="text" name="query" value="$query">
 <input type="submit" value="Search">
 </form>
 </div>
