--- a/static/inputcss.css
+++ b/static/inputcss.css
@@ -8,7 +8,6 @@ margin-left: 475px;
 .content_div
 {
 border-top: solid 1px #ccc;
-#width: 1000px;
 margin-left: 60px;
 margin-top: 20px;
 margin-right: 60px;
@@ -23,15 +22,14 @@ padding: 4px;
 
 .image_div
 {
-width: 420px;
+width: 40%;
 height: 80px;
 float: left;
-#margin-left: 200px;
 }
 
 .form_div
 {
-width: 320px;
+width: 60%;
 height: 60px;
 #padding-left: 120px;
 margin-top: 20px;
@@ -45,14 +43,14 @@ margin-bottom: 0;
 
 .doc_result_div
 {
-width: 700px;
+width: 73%;
 float: left;
 padding-left: 5px;
 }
 
 .aut_result_div
 {
-width: 370px;
+width: 25%;
 border-left: solid 2px #ccc;
 float: left;
 }
